todolist-chart/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-backend
  template:
    metadata:
      labels:
        app: todolist-backend
    spec:
      containers:
      - name: todolist-backend
        image: nguyentinh0310/todolist-backend:v1
        imagePullPolicy: "Always"
        resources: {}
        ports:
        - containerPort: 8080
