todolist-chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: todolist-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30099
