todolist-chart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: todolist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30088
