todolist-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
